Fix some values

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Instagram</title>
+    <title>Instagram Clone</title>
     <link rel="icon" sizes="192x192" href="/images/logo-favicon.png" />
   </head>
   <body>
